restructured airtable and data fetch to use urls rather than uploaded images, set image display to cover to avoid stretching, removed old fetchData.js file

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ img {
 	width:30vw;
 	height:30vw;
 	border-radius:var(--gap) var(--gap) 0 0;
+	object-fit:cover;
 }
 section, .q, #journal-prompt {
 	display:flex;
